I update my file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <div class=" main">
     <h1>Trivia Game</h1>
+    <h1>start trivia game again</h1>
     <div id="players">
        <span>Player1  </span> <input type="text" id="player1" placeholder="Name1"><br><br>
        <span>Player2  </span><input type="text" id="player2" placeholder="Name2"><br><br>
